# emoji-searcher-app

./: .gitignore  CONTRIBUTING.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: type_checking.yaml
src/emoji_searcher_app/: main.py  utils.py
tests/: test_retrieval.py
tools/: load_data_to_qdrant.py
