[project]
name = "emoji-searcher-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastembed>=0.7.1",
  "gradio>=5.34.2",
  "mypy>=1.16.1",
  "pandas>=2.3.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "qdrant-client>=1.14.3"
]

[tool.mypy]
disable_error_code = ["import-not-found", "import-untyped"]

[tool.pytest.ini_options]
pythonpath = ["src"]
